--- a/ca4/package.json
+++ b/ca4/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "argon2": "^0.30.2",
+    "body-parser": "^1.20.1",
     "crypto": "^1.0.1",
     "express": "^4.18.2",
     "socket.io": "^4.5.4"
